--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon"  href="/static/images/LogoTFG.ico" type="image/x-icon"/>
+    <link type="text/css" rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/bootstrap.css">
     <title> Neighborhood Community</title>
   </head>
   <body>
