--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="ISO-8859-1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon"  href="/static/images/LogoTFG.ico" type="image/x-icon"/>
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
@@ -9,6 +9,6 @@
     <title> Neighborhood Community</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" ></div>
   </body>
 </html>
