Vista de entregas hecha, siguiente, vistas de formularios

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon"  href="/static/images/LogoTFG.ico" type="image/x-icon"/>
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="static/css/bootstrap.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
     <title> Neighborhood Community</title>
   </head>
   <body>
