Activacion de cuentas OK, recuperacion de contraseñas OK con email y comprobaciones

--- a/vue-front/index.html
+++ b/vue-front/index.html
@@ -4,8 +4,8 @@
     <meta charset="ISO-8859-1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon"  href="/static/images/LogoTFG.ico" type="image/x-icon"/>
-    <link type="text/css" rel="stylesheet" href="static/css/style.css">
-    <link rel="stylesheet" href="static/css/bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
     <title> Neighborhood Community</title>
   </head>
   <body>
