Responsive Login president

--- a/vue-front/index.html
+++ b/vue-front/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="ISO-8859-1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon"  href="/static/images/LogoTFG.ico" type="image/x-icon"/>
     <link type="text/css" rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/bootstrap.css">
@@ -11,5 +11,6 @@
   </head>
   <body>
     <div id="app"></div>
-  </body>
+    <link rel="stylesheet" href="css/styles.css">
+      <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
 </html>
